# claude_rust

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  ROADMAP.md  SECURITY.md  clippy.toml  package.json  rustfmt.toml
.cargo/: audit.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: audit.yml  ci.yml  commit-lint.yml  release-artifacts.yml  release-cargo.yml  release-npm.yml
agent-sdk/src/: bridge.test.ts  bridge.ts  types.ts
agent-sdk/src/bridge/: cache_policy.ts  tooling.ts
scripts/: postinstall.js
src/: app.rs  error.rs  lib.rs  main.rs  perf.rs
src/acp/: client.rs  connection.rs  mod.rs  types.rs
src/agent/: bridge.rs  client.rs  error_handling.rs  events.rs  mod.rs  model.rs  types.rs  wire.rs
src/app/: cache_policy.rs  connect.rs  dialog.rs  events.rs  focus.rs  input.rs  input_submit.rs  keys.rs  mention.rs  mod.rs  paste_burst.rs  permissions.rs  selection.rs  slash.rs  state.rs  terminal.rs  todos.rs  update_check.rs
src/ui/: autocomplete.rs  chat.rs  diff.rs  header.rs  help.rs  input.rs  layout.rs  markdown.rs  message.rs  mod.rs  permission_dialog.rs  tables.rs  theme.rs  todo.rs  tool_call.rs  welcome.rs
tests/integration/: acp_events.rs  helpers.rs  internal_failures.rs  main.rs  permissions.rs  state_transitions.rs  tool_lifecycle.rs
