[package]
name = "claude-rust"
version = "0.1.3"
edition = "2024"
rust-version = "1.88.0"
license = "AGPL-3.0-or-later"
description = "A native Rust terminal interface for Claude Code"
repository = "https://github.com/srothgan/claude_rust"
keywords = ["cli", "tui", "claude", "ai", "terminal"]
categories = ["command-line-interface"]
default-run = "claude-rust"

[lib]
name = "claude_rust"
path = "src/lib.rs"

[[bin]]
name = "claude-rust"
path = "src/main.rs"

[dependencies]
agent-client-protocol = { version = "0.9.4", features = ["unstable_session_model", "unstable_session_resume", "unstable_session_usage"] }
ansi-to-tui = "8.0.1"
anyhow = "1.0.101"
arboard = "3.6.1"
async-trait = "0.1.89"
clap = { version = "4.5.57", features = ["derive"] }
crossterm = { version = "0.29.0", features = ["event-stream"] }
dirs = "6.0.0"
futures = "0.3.31"
ignore = "0.4.25"
pulldown-cmark = "0.13.0"
ratatui = { version = "0.30.0", features = ["unstable-rendered-line-info"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
similar = "2.7"
tokio = { version = "1.49.0", features = ["full"] }
tokio-util = { version = "0.7.18", features = ["compat"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tui-markdown = { version = "0.3.7" }
tui-textarea-2 = "0.9.0"
unicode-width = "0.2.2"
uuid = { version = "1.20.0", features = ["v4"] }
which = "8.0.0"

[features]
perf = []

[dev-dependencies]
pretty_assertions = "1.4"
tempfile = "3.25.0"

[lints.clippy]
# Deny panic-prone operations in production code (tests exempted via clippy.toml)
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"

# CLI tools legitimately print to stdout/stderr
print_stdout = "allow"
print_stderr = "allow"

# Pedantic with noisy exceptions disabled
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

# Lint categories
correctness = { level = "deny", priority = -1 }
suspicious = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }

# CLI-specific
exit = "deny"
shadow_same = "warn"
shadow_unrelated = "allow"
str_to_string = "warn"
